tests/NormalTests/paczka1/fuzzy1/99860005.err
Error in line 4: uToF A170 83,5
Error in line 11: qtBaZoPD A642 36,6
Error in line 12: uToF A642 298,2
Error in line 19: uToF A170 72,4
Error in line 25: uToF S134 68,9
Error in line 31: uToF A170 59,4
